<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/login_dialog_user_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/user_name"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_dialog_email_input"
        android:background="@color/little_gray"
        android:autofillHints="true"
        android:visibility="gone"
        tools:visibility="visible"/>

    <EditText
        android:id="@+id/login_dialog_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/email"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_dialog_password_input"
        android:background="@color/little_gray"
        android:autofillHints="true" />

    <EditText
        android:id="@+id/login_dialog_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@color/little_gray"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_dialog_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_dialog_password_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/login_dialog_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/login_dialog_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        tools:ignore="RtlCompat" />

    <ProgressBar
        android:id="@+id/login_dialog_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:indeterminate="true"
        app:layout_constraintTop_toBottomOf="@+id/login_dialog_password_input"
        android:visibility="gone"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/login_dialog_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>